# dm-gib

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  LICENSE  MODULE.bazel  README.txt  WORKSPACE  assimp.BUILD  glfw.BUILD  glm.BUILD  imgui.ini  sdl.BUILD  tracy.BUILD
data/models/: BUILD.bazel
data/models/cobblestone/: BUILD.bazel  model.mtl
data/textures/: BUILD.bazel
data/textures/skybox_sunset_blue/: BUILD.bazel
engine/: BUILD.bazel  window.cc  window.h
engine/buffer_util/: BUILD.bazel  README.txt  double_buffer.h  lock_free_double_buffer.h  lock_free_triple_buffer.h
engine/camera/: BUILD.bazel  camera.h  camera_base.h  fly_camera.h
engine/core/: BUILD.bazel  core.cc  core.h  frame_util.h  gl_core.cc  gl_core.h  gl_window.cc  gl_window.h  input.h  types.h  window.cc  window.h  window_util.h
engine/lighting/: BUILD.bazel  light.h  light_base.h  light_registry.h
engine/materials/: BUILD.bazel  material.cc  material.h
engine/mesh/: BUILD.bazel  mesh.h  mesh_primitives.cc  mesh_primitives.h
engine/shaders/: BUILD.bazel  compiler.cc  compiler.h  shader.cc  shader.h  types.h
engine/textures/: BUILD.bazel  texture.cc  texture.h  texture_manager.h  texture_utils.h
engine/vertex_util/: BUILD.bazel  types.h  vertex_array.cc  vertex_array.h  vertex_layout.h
error_reporter/: BUILD  error_reporter.hpp
game/: BUILD  game.hpp
gib/: BUILD.bazel  game.cc  game.h  window.h
gib/executables/: BUILD.bazel  flycam.cc  gib.cc  triangle.cc
tests/: BUILD  rectangle.hpp
tests/tests/: BUILD  simple_window.cpp
util/: BUILD.bazel  macros.h
util/assimp/: BUILD.bazel  model_importer.cc  model_importer.h
util/assimp/executables/: BUILD.bazel  test_assimp.cc
util/imgui/: BUILD.bazel  imgui_util.h  imgui_window.cc  imgui_window.h
util/report/: BUILD.bazel  error.h  macro.h  macros.h  report.h
util/time/: BUILD.bazel  downsampler.h  time.h
