module(name = "dm-gib")

bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "apple_support", version = "1.21.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "fmt", version = "11.1.4")
bazel_dep(name = "assimp", version = "5.4.3.bcr.6")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "glfw",
    url = "https://github.com/glfw/glfw/releases/download/3.4/glfw-3.4.zip",
    build_file = "@//:glfw.BUILD",
    strip_prefix = "glfw-3.4",
    sha256 = "b5ec004b2712fd08e8861dc271428f048775200a2df719ccf575143ba749a3e9"
)

http_archive(
    name = "tracy",
    url = "https://github.com/wolfpld/tracy/archive/refs/tags/v0.11.1.tar.gz",
    strip_prefix = "tracy-0.11.1",
    build_file = "@//:tracy.BUILD",
    sha256 = "2c11ca816f2b756be2730f86b0092920419f3dabc7a7173829ffd897d91888a1",
)

http_archive(
    name = "glm",
    url = "https://github.com/g-truc/glm/archive/refs/tags/1.0.1.tar.gz",
    strip_prefix = "glm-1.0.1",
    build_file = "@//:glm.BUILD",
    sha256 = "9f3174561fd26904b23f0db5e560971cbf9b3cbda0b280f04d5c379d03bf234c",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
