cc_library(
  name = "window",
  hdrs = ["window.h"],
  deps = [
    "//third_party/glad:glad",
    "//engine/core:core",
    "//engine/core:window",
    "//engine/core:input",
    "//util/imgui:imgui_util",
    "//util/imgui:imgui_window",
    "//util/report:error",
    "//util:macros",
    "@glfw",
    "@glm",
    "//third_party/imgui:imgui",
    "//engine/shaders:shader",
    "//engine/vertex_util:vertex_array",
  ],
  visibility = ["//visibility:public"],
)
