load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "lock_free_double_buffer",
    hdrs = ["lock_free_double_buffer.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lock_free_triple_buffer",
    hdrs = ["lock_free_triple_buffer.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "buffer_util",
    hdrs = [
        "lock_free_double_buffer.h",
        "lock_free_triple_buffer.h",
    ],
    visibility = ["//visibility:public"],
)
