cc_library(
  name = "core",
  srcs = ["core.cc"],
  hdrs = ["core.h"],
  deps = [
    "//third_party/glad:glad",
    "@glfw",
    "//util/report:macros",
    "//util:macros",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "window_util",
  srcs = ["window_util.h"],
  deps = [
    "//util/report:macros",
    "//util/time:downsampler",
    "//util/time:time",
    "//util:macros",
    "//third_party/imgui:imgui",
    ":types",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "input",
  srcs = ["input.h"],
  deps = [
    "//third_party/glad:glad",
    "@glfw",
    "//util:macros",
    ":types",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "gl_window",
  srcs = ["gl_window.cc"],
  hdrs = ["gl_window.h"],
  deps = [
    "//third_party/glad:glad",
    "@glfw",
    "//engine/core:core",
    "//engine/core:input",
    "//util/report:macros",
    "//util/time:downsampler",
    "//util:macros",
    ":window_util",
    ":types",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "types",
  hdrs = ["types.h"],
  deps = [
    "@glm"
  ],
  visibility = ["//visibility:public"]
)
