load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "frame_util",
    srcs = ["frame_util.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":types",
        "//third_party/imgui",
        "//util:macros",
        "//util/report",
        "//util/time",
        "//util/time:downsampler",
    ],
)

cc_library(
    name = "input",
    srcs = ["input.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":types",
        "//third_party/glad",
        "//util:macros",
        "@glfw",
    ],
)

cc_library(
    name = "gl_window",
    srcs = ["gl_window.cc"],
    hdrs = ["gl_window.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":frame_util",
        ":types",
        "//engine/core:input",
        "//third_party/glad",
        "//util:macros",
        "//util/report",
        "//util/time:downsampler",
        "@glfw",
    ],
)

cc_library(
    name = "types",
    hdrs = ["types.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@glm",
    ],
)

cc_library(
    name = "core",
    srcs = ["gl_window.cc"],
    hdrs = [
        "frame_util.h",
        "gl_window.h",
        "input.h",
        "types.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":gl_window",
        ":types",
        "//third_party/imgui",
        "//util:macros",
        "//util/report",
        "//util/time",
        "//util/time:downsampler",
        "@fmt",
        "@glm",
    ],
)
