load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "types",
    hdrs = ["types.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "compiler",
    srcs = ["compiler.cc"],
    hdrs = ["compiler.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":types",
        "//third_party/glad",
        "//util/report",
    ],
)

cc_library(
    name = "shader",
    srcs = ["shader.cc"],
    hdrs = ["shader.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":compiler",
        ":types",
        "//third_party/glad",
        "//util:macros",
        "//util/report",
        "@glm",
    ],
)

cc_library(
    name = "shaders",
    srcs = [
        "compiler.cc",
        "shader.cc",
    ],
    hdrs = [
        "compiler.h",
        "shader.h",
        "types.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":compiler",
        ":shader",
        ":types",
        "//third_party/glad",
        "//util:macros",
        "//util/report",
        "@glm",
    ],
)
