load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "texture",
    srcs = ["texture.cc"],
    hdrs = [
        "texture.h",
        "texture_utils.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/core:types",
        "//engine/shaders:shader",
        "//third_party/glad",
        "//util/report",
        "@assimp",  # keep
        "@glm",
        "@stb//:stb_image",  # keep
    ],
)
