load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "types",
    hdrs = ["types.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vertex_array",
    srcs = ["vertex_array.cc"],
    hdrs = ["vertex_array.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":types",
        "//third_party/glad",
        "//util/report",
    ],
)

cc_library(
    name = "vertex_util",
    srcs = ["vertex_array.cc"],
    hdrs = [
        "types.h",
        "vertex_array.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":types",
        ":vertex_array",
        "//third_party/glad",
        "//util/report",
    ],
)
