cc_binary(
    name = "triangle",
    srcs = ["triangle.cc"],
    deps = [
        "//third_party/concise_args:concise_args",
        "//engine/shaders:shader",
        "//engine/vertex_util:vertex_array",
        "//gib:window",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "flycam",
    srcs = ["flycam.cc"],
    deps = [
        "//engine/camera:camera_base",
        "//engine/camera:fly_camera",
        "//third_party/concise_args:concise_args",
        "//engine/shaders:shader",
        "//engine/vertex_util:vertex_array",
        "//gib:window",
    ],
    visibility = ["//visibility:public"],
)