load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "model_importer",
    srcs = ["model_importer.cc"],
    hdrs = ["model_importer.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/core:gl_window",
        "//engine/mesh",
        "//engine/textures:texture",
        "//util/report",
        "@glm",
    ],
)
