cc_library(
  name = "imgui_window",
  srcs = ["imgui_window.cc"],
  hdrs = ["imgui_window.h"],
  deps = [
    "//third_party/glad:glad",
    "//util/report:macros",
    "//third_party/imgui:imgui",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "imgui_util",
  hdrs = ["imgui_util.h"],
  deps = [
    "//third_party/imgui:imgui",
  ],
  visibility = ["//visibility:public"],
)
