load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "downsampler",
    hdrs = ["downsampler.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":time",
    ],
)

cc_library(
    name = "time",
    hdrs = [
        "downsampler.h",
        "time.h",
    ],
    visibility = ["//visibility:public"],
)
