load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "test_assimp",
    srcs = ["test_assimp.cc"],
    data = [
        "//data/models/cobblestone:model.obj",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/core:gl_window",
        "//third_party/concise_args",
        "//third_party/glad",
        "//util/assimp:model_importer",
        "//util/report",
        "@assimp",
        "@glfw",
    ],
)
